err/subconscious.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aioredis'...
Listing './lib/python3.5/site-packages/aioredis/commands'...
Listing './lib/python3.5/site-packages/aioredis/sentinel'...
Listing './lib/python3.5/site-packages/aioredis-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/hiredis'...
Listing './lib/python3.5/site-packages/hiredis-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/subconscious'...
Compiling './lib/python3.5/site-packages/subconscious/model.py'...
***   File "./lib/python3.5/site-packages/subconscious/model.py", line 248
    yield x
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/subconscious-0.8.5.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_order_by.py'...
***   File "./lib/python3.5/site-packages/tests/test_order_by.py", line 32
    user_names = [x.name async for x in TestUser.filter_by(self.db, status='active', order_by='name')]
                             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
